Fix card filtering for Masonry

--- a/server/templates/layouts/base.html
+++ b/server/templates/layouts/base.html
@@ -54,7 +54,7 @@
                     </li>
                 </ul>
             </div>
-            <form class="form-inline ml-auto">
+            <form class="form-inline ml-auto" role="search">
                 <input type="search" class="form-control" placeholder="Search" aria-label="Search" id="search">
             </form>
         </div>
